--- a/home-header.css
+++ b/home-header.css
@@ -56,7 +56,7 @@
   }
 
   .h-button:hover{
-    text-decoration: underline;
+    color: rgb(0, 44, 50);
   }
 
 
@@ -68,4 +68,6 @@
     }
   }
 
-  
+.contact-logo{
+  width: 25px;
+}
