--- a/general.css
+++ b/general.css
@@ -55,3 +55,44 @@ h3{
   text-align: center;
   width: 100%;
 }
+
+
+.policy-box{
+  margin-right: 50px;
+  margin-left: 50px;
+  margin-top: 290px;
+  margin-bottom: 100px;
+}
+
+.register-button{
+  padding: 25px 35px 25px 35px;
+  font-family: tahoma;
+  border-radius: 36px;
+  font-size: 20px;
+  transition: 0.4s;
+  color: rgb(16, 118, 144);
+  background-color: rgb(255, 255, 255);
+  border: 2px;
+  border-style: solid;
+}
+
+.register-button:hover{
+  cursor: pointer;
+  color: rgb(16, 118, 144);
+  background-color: rgb(249, 249, 249);
+  box-shadow: 4px 3px 10px rgba(0, 0, 0, 0.3);
+}
+
+.register-box{
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.register-box-cont{
+  margin: 20px 20px 20px 20px;
+}
+
+.register-box-image{
+  width: 50px;
+}
