--- a/general.css
+++ b/general.css
@@ -4,8 +4,10 @@ body{
     font-size: 20px;
     color: rgb(16, 118, 144);
     overflow-x: hidden; /* Hide horizontal scrollbar */
+    width: 100vw;
+    height: 100vh;
   }
-
+  
 h1{
     font-family:chromate;
 }
